# prism

./: .dev.vars.example  .gitignore  ACTION_PLAN.md  API_REFERENCE.md  ARCHITECTURE_SUMMARY.md  AUDIT_REPORT.md  BUILD_QUICKREF.md  CLAUDE.md  CONFIGURATION.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_READY.md  DOCUMENTATION_SUMMARY.md  FILE_INDEXER_IMPLEMENTATION.md  HOTFIX_NEEDED.md  MERGE_READY.md  MVP_COMPLETE.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY_SUMMARY.md  PULL_REQUEST.md  README.md  ROUND2_COMPLETE.md  ROUND3_COMPLETE.md  ROUND3_SUMMARY.md  SHARE_WITH_DEVELOPERS.md  TROUBLESHOOTING.md  USER_GUIDE.md  package.json  tsconfig.json  wrangler.toml
.github/: PULL_REQUEST_TEMPLATE.md
claude-code-plugin/: .cache-bust-$(date +%s)  .npmignore  CLAUDE.md  FILE_WATCHER_IMPLEMENTATION.md  FILE_WATCHER_SUMMARY.md  LICENSE  PERFORMANCE_IMPROVEMENTS.md  README-LOCAL-JSON.md  README.md  STATUS.md  TECHNICAL-DOCUMENTATION.md  TEST_RESULTS.md  TEST_SUMMARY.txt  USER_GUIDE.md  benchmark.sh  cache-bust.txt  demo-indexer.sh  install.bat  install.sh  package.json  test-integration.sh  test-server.js
docs/: COMMENT_ENHANCEMENT_SUMMARY.md  INDEX.md  ROUND3_ARCHITECTURE.md  ROUND3_BUILD_GUIDE.md  ROUND_4_SUMMARY.md  benchmark-results.md  prism-cli.md  v1.0-launch-checklist.md
examples/: README.md
migrations/: 001_initial.sql
prism/: .eslintrc.js  .gitignore  CONTRIBUTING.md  LICENSE  MVP_COMPLETE.md  README.md  (+14 more)
prism/prism-indexer/: Cargo.toml  build.sh
prism/prism-indexer/src/: chunker.rs  error.rs  extractor.rs  lib.rs  parser.rs  types.rs
(+282 files in other folders)
